refactor: 불변 리스트 반환하도록 수정