@@ -18,7 +18,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional(readOnly = true)
@@ -74,6 +73,6 @@ public class MessageService {
 
         return readMessages.stream()
                            .map(ReadMessageDto::from)
-                           .collect(Collectors.toList());
+                           .toList();
     }
 }
